--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,22 +34,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
-  file_picker: ^8.3.1
-  flutter_settings_ui: ^3.0.1
-  font_awesome_flutter: ^10.8.0
+  dots_indicator: ^4.0.1
+  flutter_riverpod: ^2.6.1
+  animated_theme_switcher: ^2.0.10
+  gif: ^2.3.0
+  carousel_slider: ^5.0.0
   dio: ^5.8.0+1
-  url_launcher: ^6.3.1
-  loader_overlay: ^5.0.0
-  flutter_spinkit: ^5.2.1
   path_provider: ^2.1.5
   gallery_saver: ^2.3.2
-  shared_preferences: ^2.5.1
-  flutter_speed_dial: ^7.0.0
-  flutter_animate: ^4.5.2
-  dots_indicator: ^3.0.0
+  image_picker: ^1.1.2
+  flutter_settings_ui: ^3.0.1
+  url_launcher: ^6.3.1
+  file_picker: ^9.0.0
+  loader_overlay: ^5.0.0
   pincode_input_fields: ^1.0.3
   convex_bottom_bar: ^3.2.0
+  flutter_spinkit: ^5.2.1
+  shared_preferences: ^2.5.2
+  share_plus: ^10.1.4
+  font_awesome_flutter: ^10.8.0
+
+dependency_overrides:
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
@@ -60,7 +66,7 @@ flutter_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/logo.gif"
   web:
     generate: true
   windows:
@@ -88,6 +94,7 @@ flutter:
   assets:
     - assets/images/
     - assets/profile/
+    - assets/animation/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
